--- a/Personal/index.html
+++ b/Personal/index.html
@@ -50,11 +50,11 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="https://www.linkedin.com/in/chinedu-francis-ozurumba-0b233820a/" class="linkedln"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/cloudtechhills" class="github"><i class="bi bi-github"> </i></a>
+        <a href="https://www.linkedin.com/in/chinedu-francis-ozurumba-0b233820a/" target="_blank" class="linkedln"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/cloudtechhills" target="_blank" class="github"><i class="bi bi-github"> </i></a>
         <!-- <a href="#" class="youtube"><i class="bi bi-youtube"> </i></a>
         <a href="#" class="discord"><i class="bi bi-discord"> </i></a> -->
-        <a href="https://twitter.com/nedustarboy88" class="twitter"><i class="bi bi-twitter"> </i></a>
+        <a href="https://twitter.com/nedustarboy88" target="_blank" class="twitter"><i class="bi bi-twitter"> </i></a>
       </div>
 
     </div>
@@ -358,9 +358,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/chinedu-francis-ozurumba-0b233820a/" class="linkedln"><i class="bi bi-linkedin"></i></a>
-              <a href="https://github.com/cloudtechhills" class="github"><i class="bi bi-github"> </i></a>
-              <a href="https://twitter.com/nedustarboy88" class="twitter"><i class="bi bi-twitter"> </i></a>
+              <a href="https://www.linkedin.com/in/chinedu-francis-ozurumba-0b233820a/" target="_blank" class="linkedln"><i class="bi bi-linkedin"></i></a>
+              <a href="https://github.com/cloudtechhills" target="_blank" class="github"><i class="bi bi-github"> </i></a>
+              <a href="https://twitter.com/nedustarboy88" target="_blank" class="twitter"><i class="bi bi-twitter"> </i></a>
             </div>
           </div>
         </div>
